// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "almost-black" 1`] = `
{
  "blocks": [
    "Zara Osei",
    "zara.osei@email.com (917) 555-6621 Brooklyn, NY zaraosei.studio linkedin.com/in/zaraosei",
    "Summary",
    "Creative director and brand strategist working at the intersection of culture, technology, and design. Clients include Apple, Nike, and Netflix.",
    "Experience",
    "Creative Director",
    "Instrument | New York, NY",
    "Jan 2021 - Present",
    "Lead multi-disciplinary creative team of 30. Directed campaigns for Apple Music, Snap, and Hulu earning 4 Cannes Lions awards.",
    "Senior Art Director",
    "Wieden+Kennedy | Portland, OR",
    "May 2017 - Dec 2020",
    "Art directed Nike and Coca-Cola global campaigns reaching 500M+ impressions.",
    "Education",
    "B.F.A. in Communication Design",
    "Parsons School of Design",
    "2011 - 2015",
    "Skills",
    "Creative Direction",
    "Brand Strategy",
    "Art Direction",
    "Figma",
    "After Effects",
    "Conceptual Thinking",
    "Leadership",
    "Projects",
    "Apple Music Campaign",
    "Global launch campaign reaching 1B impressions.",
    "Brand",
    "Motion",
    "OOH",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "atlantic-blue" 1`] = `
{
  "blocks": [
    "Marcus Chen",
    "marcus.chen@email.com",
    "(415) 555-0192",
    "Seattle, WA",
    "marcuschen.dev",
    "linkedin.com/in/marcuschen",
    "Summary",
    "Solutions architect with 10+ years designing cloud-native systems for enterprise clients across finance and healthcare sectors.",
    "Skills",
    "AWS",
    "Azure",
    "Kubernetes",
    "Terraform",
    "Python",
    "System Design",
    "gRPC",
    "Experience",
    "Principal Solutions Architect",
    "Amazon Web Services | Seattle, WA",
    "Jan 2020 - Present",
    "Architected multi-cloud platforms for Fortune 500 clients. Led 12-person engineering team delivering $40M in infrastructure savings.",
    "Senior Cloud Engineer",
    "Microsoft Azure | Redmond, WA",
    "Jun 2016 - Dec 2019",
    "Built highly available distributed systems serving 10M+ daily active users across 3 regions.",
    "Education",
    "M.S. in Computer Science",
    "University of Washington",
    "2010 - 2012",
  ],
  "warningCodes": [
    "ambiguous-columns",
  ],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "azure-classic" 1`] = `
{
  "blocks": [
    "Alex Johnson",
    "alex.johnson@email.com (555) 123-4567 San Francisco, CA alexjohnson.dev linkedin.com/in/alexjohnson",
    "Summary",
    "Product-focused software engineer with 6+ years building modern user experiences and scalable systems.",
    "Experience",
    "Senior Software Engineer",
    "Tech Dynamix | Remote",
    "Apr 2020 - Present",
    "Lead React/TypeScript projects; mentoring 8 engineers; designed authentication and cloud integrations.",
    "Frontend Developer",
    "Pixel Rocket | San Jose, CA",
    "Jan 2018 - Mar 2020",
    "Developed robust web interfaces for SaaS platform used by Fortune 500 partners.",
    "Education",
    "B.Sc. in Computer Science",
    "UC Berkeley",
    "2014 - 2017",
    "Skills",
    "JavaScript",
    "React",
    "TypeScript",
    "Node.js",
    "Cloud",
    "REST APIs",
    "Projects",
    "Realtime Collaboration App",
    "In-browser team editor with live presence.",
    "React",
    "Socket.IO",
    "AWS",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "blue-neon" 1`] = `
{
  "blocks": [
    "Kai Tanaka",
    "kai.tanaka@email.com (510) 555-3021 Oakland, CA kaitanaka.io linkedin.com/in/kaitanaka",
    "Summary",
    "Full-stack engineer and startup founder with a passion for developer tooling, open-source, and building products that scale from 0 to 1M users.",
    "Experience",
    "Co-Founder & CTO",
    "Devflow | San Francisco, CA",
    "Jan 2022 - Present",
    "Built CI/CD developer platform from ground up. Grew to 15K users, $1.2M ARR. Stack: Next.js, Go, Postgres, K8s.",
    "Staff Engineer",
    "Vercel | Remote",
    "Mar 2019 - Dec 2021",
    "Contributed to edge runtime and deployment infrastructure serving 100B+ requests/month.",
    "Education",
    "B.S. in Computer Science",
    "UC San Diego",
    "2013 - 2017",
    "Skills",
    "TypeScript",
    "Go",
    "React",
    "Next.js",
    "PostgreSQL",
    "Kubernetes",
    "AWS",
    "System Design",
    "Projects",
    "open-ci ↗",
    "Open-source CI pipeline runner. 4.2K GitHub stars.",
    "Go",
    "Docker",
    "gRPC",
  ],
  "warningCodes": [
    "inaccessible-link",
    "unusual-glyph",
  ],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "bold-headline" 1`] = `
{
  "blocks": [
    "Alex Johnson",
    "alex.johnson@email.com (555) 123-4567 San Francisco, CA alexjohnson.dev linkedin.com/in/alexjohnson",
    "Summary",
    "Product-focused software engineer with 6+ years building modern user experiences and scalable systems.",
    "Experience",
    "Senior Software Engineer",
    "Tech Dynamix | Remote",
    "Apr 2020 - Present",
    "Lead React/TypeScript projects; mentoring 8 engineers; designed authentication and cloud integrations.",
    "Frontend Developer",
    "Pixel Rocket | San Jose, CA",
    "Jan 2018 - Mar 2020",
    "Developed robust web interfaces for SaaS platform used by Fortune 500 partners.",
    "Education",
    "B.Sc. in Computer Science",
    "UC Berkeley",
    "2014 - 2017",
    "Skills",
    "JavaScript",
    "React",
    "TypeScript",
    "Node.js",
    "Cloud",
    "REST APIs",
    "Projects",
    "Realtime Collaboration App",
    "In-browser team editor with live presence.",
    "React",
    "Socket.IO",
    "AWS",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "charcoal-glow" 1`] = `
{
  "blocks": [
    "Isabella Romano",
    "isabella.romano@email.com +39 02 1234 5678 Milan, Italy linkedin.com/in/isabellaromano",
    "Skills",
    "Brand Strategy",
    "Luxury Marketing",
    "P&L Management",
    "Creative Direction",
    "Licensing",
    "Italian",
    "French",
    "Summary",
    "Fashion industry executive with 18 years leading brand strategy, product development, and global licensing for luxury and premium fashion houses.",
    "Experience",
    "Chief Brand Officer",
    "Moncler Group | Milan, IT",
    "Mar 2019 - Present",
    "Spearhead global brand strategy for €2.1B luxury brand. Launched Genius collaboration platform generating €220M incremental revenue.",
    "VP Brand & Creative",
    "Versace | Milan, IT",
    "Jan 2013 - Feb 2019",
    "Directed creative positioning and rebranding during Capri Holdings acquisition. Managed €80M brand budget.",
    "Education",
    "MBA in Luxury Brand Management",
    "Bocconi University",
    "2008 - 2010",
  ],
  "warningCodes": [
    "ambiguous-columns",
  ],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "classic-clear" 1`] = `
{
  "blocks": [
    "Daniel Park",
    "daniel.park@email.com (213) 555-9834 Los Angeles, CA linkedin.com/in/danielpark",
    "Summary",
    "Financial analyst and investment strategist with expertise in equity research and portfolio management across tech and consumer sectors.",
    "Experience",
    "Vice President — Equity Research",
    "Goldman Sachs | Los Angeles, CA",
    "Jul 2019 - Present",
    "Cover technology sector ($2T+ market cap). Top-ranked analyst for three consecutive years by Institutional Investor.",
    "Analyst",
    "JPMorgan Chase | New York, NY",
    "Aug 2015 - Jun 2019",
    "Built financial models and DCF valuations for M&A transactions totaling $18B.",
    "Education",
    "MBA in Finance",
    "Wharton School, UPenn",
    "2013 - 2015",
    "Skills",
    "Financial Modeling",
    "DCF Valuation",
    "Bloomberg Terminal",
    "Equity Research",
    "Python",
    "Excel VBA",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "clean-slate" 1`] = `
{
  "blocks": [
    "Alex Johnson",
    "alex.johnson@email.com (555) 123-4567 San Francisco, CA alexjohnson.dev linkedin.com/in/alexjohnson",
    "Summary",
    "Product-focused software engineer with 6+ years building modern user experiences and scalable systems.",
    "Experience",
    "Senior Software Engineer",
    "Tech Dynamix | Remote",
    "Apr 2020 - Present",
    "Lead React/TypeScript projects; mentoring 8 engineers; designed authentication and cloud integrations.",
    "Frontend Developer",
    "Pixel Rocket | San Jose, CA",
    "Jan 2018 - Mar 2020",
    "Developed robust web interfaces for SaaS platform used by Fortune 500 partners.",
    "Education",
    "B.Sc. in Computer Science",
    "UC Berkeley",
    "2014 - 2017",
    "Skills",
    "JavaScript",
    "React",
    "TypeScript",
    "Node.js",
    "Cloud",
    "REST APIs",
    "Projects",
    "Realtime Collaboration App",
    "In-browser team editor with live presence.",
    "React",
    "Socket.IO",
    "AWS",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "cobalt-edge" 1`] = `
{
  "blocks": [
    "Aria Williams",
    "aria.williams@email.com (202) 555-4782 Washington, DC linkedin.com/in/ariawilliams",
    "Skills",
    "Zero Trust",
    "NIST Framework",
    "Penetration Testing",
    "SIEM",
    "Python",
    "FedRAMP",
    "FISMA",
    "Summary",
    "Cybersecurity engineer and policy advisor with Top Secret clearance. Expert in zero-trust architecture and federal compliance frameworks.",
    "Experience",
    "Senior Cybersecurity Engineer",
    "CISA | Washington, DC",
    "Jun 2020 - Present",
    "Architected zero-trust network for critical infrastructure protecting 500+ federal agencies. Led incident response for 3 nation-state attacks.",
    "Security Analyst",
    "Booz Allen Hamilton | McLean, VA",
    "Jul 2016 - May 2020",
    "Performed red team assessments and penetration testing for DoD clients.",
    "Education",
    "M.S. in Cybersecurity Policy",
    "Georgetown University",
    "2014 - 2016",
  ],
  "warningCodes": [
    "ambiguous-columns",
  ],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "column-ledger" 1`] = `
{
  "blocks": [
    "Alex Johnson",
    "alex.johnson@email.com",
    "(555) 123-4567",
    "San Francisco, CA",
    "alexjohnson.dev",
    "linkedin.com/in/alexjohnson",
    "Summary",
    "Product-focused software engineer with 6+ years building modern user experiences and scalable systems.",
    "Skills",
    "JavaScript",
    "React",
    "TypeScript",
    "Node.js",
    "Cloud",
    "REST APIs",
    "Experience",
    "Senior Software Engineer",
    "Tech Dynamix | Remote",
    "Apr 2020 - Present",
    "Lead React/TypeScript projects; mentoring 8 engineers; designed authentication and cloud integrations.",
    "Frontend Developer",
    "Pixel Rocket | San Jose, CA",
    "Jan 2018 - Mar 2020",
    "Developed robust web interfaces for SaaS platform used by Fortune 500 partners.",
    "Education",
    "B.Sc. in Computer Science",
    "UC Berkeley",
    "2014 - 2017",
    "Projects",
    "Realtime Collaboration App",
    "In-browser team editor with live presence.",
    "React",
    "Socket.IO",
    "AWS",
  ],
  "warningCodes": [
    "ambiguous-columns",
  ],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "compact-ats" 1`] = `
{
  "blocks": [
    "Alex Johnson",
    "alex.johnson@email.com (555) 123-4567 San Francisco, CA alexjohnson.dev linkedin.com/in/alexjohnson",
    "Summary",
    "Product-focused software engineer with 6+ years building modern user experiences and scalable systems.",
    "Experience",
    "Senior Software Engineer",
    "Tech Dynamix | Remote",
    "Apr 2020 - Present",
    "Lead React/TypeScript projects; mentoring 8 engineers; designed authentication and cloud integrations.",
    "Frontend Developer",
    "Pixel Rocket | San Jose, CA",
    "Jan 2018 - Mar 2020",
    "Developed robust web interfaces for SaaS platform used by Fortune 500 partners.",
    "Education",
    "B.Sc. in Computer Science",
    "UC Berkeley",
    "2014 - 2017",
    "Skills",
    "JavaScript",
    "React",
    "TypeScript",
    "Node.js",
    "Cloud",
    "REST APIs",
    "Projects",
    "Realtime Collaboration App",
    "In-browser team editor with live presence.",
    "React",
    "Socket.IO",
    "AWS",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "coral-creative" 1`] = `
{
  "blocks": [
    "Taylor Rodriguez",
    "taylor.rodriguez@example.com (555) 456-7890 Austin, TX taylor-design.co",
    "Summary",
    "Creative designer specializing in UI/UX, brand identity, and digital media with 6 years of agency experience.",
    "Experience",
    "Senior UX Designer",
    "CreativeSpace Agency | Austin, TX",
    "Mar 2022 - Present",
    "Led the redesign of client flagship product, increasing user engagement by 40%.",
    "UI Designer",
    "Digital Innovations | Houston, TX",
    "Jun 2019 - Feb 2022",
    "Designed user interfaces for web and mobile applications.",
    "Education",
    "Bachelor's in Graphic Design",
    "RISD",
    "2015 - 2019",
    "Skills",
    "UI/UX Design",
    "Figma",
    "Adobe Creative Suite",
    "Wireframing",
    "Prototyping",
    "User Research",
    "Projects",
    "Fitness App Redesign",
    "Complete redesign focusing on usability and visual appeal.",
    "Figma",
    "Photoshop",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "duo-tone" 1`] = `
{
  "blocks": [
    "Alex Johnson",
    "alex.johnson@email.com",
    "(555) 123-4567",
    "San Francisco, CA",
    "alexjohnson.dev",
    "linkedin.com/in/alexjohnson",
    "Summary",
    "Product-focused software engineer with 6+ years building modern user experiences and scalable systems.",
    "Skills",
    "JavaScript",
    "React",
    "TypeScript",
    "Node.js",
    "Cloud",
    "REST APIs",
    "Experience",
    "Senior Software Engineer",
    "Tech Dynamix | Remote",
    "Apr 2020 - Present",
    "Lead React/TypeScript projects; mentoring 8 engineers; designed authentication and cloud integrations.",
    "Frontend Developer",
    "Pixel Rocket | San Jose, CA",
    "Jan 2018 - Mar 2020",
    "Developed robust web interfaces for SaaS platform used by Fortune 500 partners.",
    "Education",
    "B.Sc. in Computer Science",
    "UC Berkeley",
    "2014 - 2017",
    "Projects",
    "Realtime Collaboration App",
    "In-browser team editor with live presence.",
    "React",
    "Socket.IO",
    "AWS",
  ],
  "warningCodes": [
    "ambiguous-columns",
  ],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "editorial-rule" 1`] = `
{
  "blocks": [
    "Catherine Moreau",
    "c.moreau@writersmail.com +33 6 12 34 56 78 Paris, France catherinemoreau.press",
    "Summary",
    "Investigative journalist and editorial director with 15 years covering global politics, technology policy, and climate change for leading European publications.",
    "Experience",
    "Editorial Director",
    "Le Monde | Paris, FR",
    "Jan 2020 - Present",
    "Oversee team of 45 journalists and editors. Launched digital investigative desk winning 2 Prix de la Presse awards.",
    "Senior Correspondent",
    "Reuters | Brussels, BE",
    "Mar 2014 - Dec 2019",
    "Covered EU politics and tech regulation. Broke multiple stories on data privacy legislation.",
    "Education",
    "Master in Journalism & Political Science",
    "Sciences Po Paris",
    "2007 - 2009",
    "Skills",
    "Investigative Reporting",
    "Editorial Leadership",
    "EU Policy",
    "French",
    "English",
    "Spanish",
    "Data Journalism",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "elegant-contrast" 1`] = `
{
  "blocks": [
    "Alex Johnson",
    "alex.johnson@email.com (555) 123-4567 San Francisco, CA alexjohnson.dev linkedin.com/in/alexjohnson",
    "Summary",
    "Product-focused software engineer with 6+ years building modern user experiences and scalable systems.",
    "Experience",
    "Senior Software Engineer",
    "Tech Dynamix | Remote",
    "Apr 2020 - Present",
    "Lead React/TypeScript projects; mentoring 8 engineers; designed authentication and cloud integrations.",
    "Frontend Developer",
    "Pixel Rocket | San Jose, CA",
    "Jan 2018 - Mar 2020",
    "Developed robust web interfaces for SaaS platform used by Fortune 500 partners.",
    "Education",
    "B.Sc. in Computer Science",
    "UC Berkeley",
    "2014 - 2017",
    "Skills",
    "JavaScript",
    "React",
    "TypeScript",
    "Node.js",
    "Cloud",
    "REST APIs",
    "Projects",
    "Realtime Collaboration App",
    "In-browser team editor with live presence.",
    "React",
    "Socket.IO",
    "AWS",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "emerald-minimal" 1`] = `
{
  "blocks": [
    "Emma Larsson",
    "emma.larsson@email.com (555) 678-9012 San Francisco, CA emmalarsson.design linkedin.com/in/emmalarsson",
    "Summary",
    "Product designer with 7 years crafting user-centered digital experiences for SaaS products.",
    "Experience",
    "Lead Product Designer",
    "Notion Labs | San Francisco, CA",
    "Sep 2021 - Present",
    "Lead design for core features used by 30M+ users. Built design system with 200+ components.",
    "Senior UX Designer",
    "Figma | San Francisco, CA",
    "Jan 2019 - Aug 2021",
    "Designed collaboration features increasing user engagement by 45%.",
    "Education",
    "BFA in Graphic Design",
    "RISD",
    "2013 - 2017",
    "Skills",
    "Figma",
    "Design Systems",
    "User Research",
    "Prototyping",
    "Accessibility",
    "HTML/CSS",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "executive-serif" 1`] = `
{
  "blocks": [
    "James Wellington III",
    "j.wellington@email.com (555) 456-7890 New York, NY linkedin.com/in/jameswellington",
    "Summary",
    "C-suite executive with 20+ years driving P&L growth across technology and financial services.",
    "Experience",
    "Chief Operating Officer",
    "Pinnacle Financial Group | New York, NY",
    "Jan 2020 - Present",
    "Oversee $2.4B revenue operations with 1,200+ employees. Drove 34% YoY growth.",
    "SVP of Strategy",
    "Atlantic Capital Partners | Boston, MA",
    "Mar 2015 - Dec 2019",
    "Led corporate strategy. Executed 3 major acquisitions totaling $850M.",
    "Education",
    "MBA in Finance & Strategy",
    "Harvard Business School",
    "2008 - 2010",
    "Skills",
    "Strategic Planning",
    "P&L Management",
    "M&A",
    "Board Relations",
    "Executive Leadership",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "graduate-focus" 1`] = `
{
  "blocks": [
    "Alex Johnson",
    "alex.johnson@email.com (555) 123-4567 San Francisco, CA alexjohnson.dev linkedin.com/in/alexjohnson",
    "Summary",
    "Product-focused software engineer with 6+ years building modern user experiences and scalable systems.",
    "Experience",
    "Senior Software Engineer",
    "Tech Dynamix | Remote",
    "Apr 2020 - Present",
    "Lead React/TypeScript projects; mentoring 8 engineers; designed authentication and cloud integrations.",
    "Frontend Developer",
    "Pixel Rocket | San Jose, CA",
    "Jan 2018 - Mar 2020",
    "Developed robust web interfaces for SaaS platform used by Fortune 500 partners.",
    "Education",
    "B.Sc. in Computer Science",
    "UC Berkeley",
    "2014 - 2017",
    "Skills",
    "JavaScript",
    "React",
    "TypeScript",
    "Node.js",
    "Cloud",
    "REST APIs",
    "Projects",
    "Realtime Collaboration App",
    "In-browser team editor with live presence.",
    "React",
    "Socket.IO",
    "AWS",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "harbor-serif" 1`] = `
{
  "blocks": [
    "Alex Johnson",
    "alex.johnson@email.com (555) 123-4567 San Francisco, CA alexjohnson.dev linkedin.com/in/alexjohnson",
    "Summary",
    "Product-focused software engineer with 6+ years building modern user experiences and scalable systems.",
    "Experience",
    "Senior Software Engineer",
    "Tech Dynamix | Remote",
    "Apr 2020 - Present",
    "Lead React/TypeScript projects; mentoring 8 engineers; designed authentication and cloud integrations.",
    "Frontend Developer",
    "Pixel Rocket | San Jose, CA",
    "Jan 2018 - Mar 2020",
    "Developed robust web interfaces for SaaS platform used by Fortune 500 partners.",
    "Education",
    "B.Sc. in Computer Science",
    "UC Berkeley",
    "2014 - 2017",
    "Skills",
    "JavaScript",
    "React",
    "TypeScript",
    "Node.js",
    "Cloud",
    "REST APIs",
    "Projects",
    "Realtime Collaboration App",
    "In-browser team editor with live presence.",
    "React",
    "Socket.IO",
    "AWS",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "header-band" 1`] = `
{
  "blocks": [
    "Alex Johnson",
    "alex.johnson@email.com (555) 123-4567 San Francisco, CA alexjohnson.dev linkedin.com/in/alexjohnson",
    "Summary",
    "Product-focused software engineer with 6+ years building modern user experiences and scalable systems.",
    "Experience",
    "Senior Software Engineer",
    "Tech Dynamix | Remote",
    "Apr 2020 - Present",
    "Lead React/TypeScript projects; mentoring 8 engineers; designed authentication and cloud integrations.",
    "Frontend Developer",
    "Pixel Rocket | San Jose, CA",
    "Jan 2018 - Mar 2020",
    "Developed robust web interfaces for SaaS platform used by Fortune 500 partners.",
    "Education",
    "B.Sc. in Computer Science",
    "UC Berkeley",
    "2014 - 2017",
    "Skills",
    "JavaScript",
    "React",
    "TypeScript",
    "Node.js",
    "Cloud",
    "REST APIs",
    "Projects",
    "Realtime Collaboration App",
    "In-browser team editor with live presence.",
    "React",
    "Socket.IO",
    "AWS",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "hunter-green" 1`] = `
{
  "blocks": [
    "Oliver Nduka",
    "oliver.nduka@email.com",
    "+44 20 7946 0958",
    "London, UK",
    "linkedin.com/in/olivernduka",
    "Summary",
    "Environmental consultant and sustainability strategist helping FTSE 100 companies achieve net-zero commitments and ESG reporting compliance.",
    "Skills",
    "ESG Strategy",
    "Carbon Accounting",
    "TCFD Reporting",
    "Stakeholder Engagement",
    "GHG Protocol",
    "CDP",
    "Experience",
    "Director, Sustainability Advisory",
    "Deloitte | London, UK",
    "Feb 2020 - Present",
    "Led ESG transformation programs for 20+ major corporations. Designed carbon accounting frameworks saving clients £50M in potential fines.",
    "Senior Environmental Consultant",
    "WWF UK | London, UK",
    "May 2015 - Jan 2020",
    "Developed science-based targets for UK corporate partners. Managed £8M programme portfolio.",
    "Education",
    "M.Sc. in Environmental Technology",
    "Imperial College London",
    "2012 - 2013",
  ],
  "warningCodes": [
    "ambiguous-columns",
  ],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "ink-serif" 1`] = `
{
  "blocks": [
    "Alex Johnson",
    "alex.johnson@email.com (555) 123-4567 San Francisco, CA alexjohnson.dev linkedin.com/in/alexjohnson",
    "Summary",
    "Product-focused software engineer with 6+ years building modern user experiences and scalable systems.",
    "Experience",
    "Senior Software Engineer",
    "Tech Dynamix | Remote",
    "Apr 2020 - Present",
    "Lead React/TypeScript projects; mentoring 8 engineers; designed authentication and cloud integrations.",
    "Frontend Developer",
    "Pixel Rocket | San Jose, CA",
    "Jan 2018 - Mar 2020",
    "Developed robust web interfaces for SaaS platform used by Fortune 500 partners.",
    "Education",
    "B.Sc. in Computer Science",
    "UC Berkeley",
    "2014 - 2017",
    "Skills",
    "JavaScript",
    "React",
    "TypeScript",
    "Node.js",
    "Cloud",
    "REST APIs",
    "Projects",
    "Realtime Collaboration App",
    "In-browser team editor with live presence.",
    "React",
    "Socket.IO",
    "AWS",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "mercury-flow" 1`] = `
{
  "blocks": [
    "Sophie Andersson",
    "sophie.andersson@email.com +46 70 123 4567 Stockholm, Sweden linkedin.com/in/sophieandersson",
    "Summary",
    "Product manager bridging design and engineering to launch data-driven features at scale. 8 years in SaaS, B2B, and fintech.",
    "Experience",
    "Senior Product Manager",
    "Spotify | Stockholm",
    "Mar 2021 - Present",
    "Own the Discover Weekly recommendation product. Grew weekly engaged users by 22% in 18 months.",
    "Product Manager",
    "Klarna | Stockholm",
    "Jan 2018 - Feb 2021",
    "Led checkout flow redesign reducing drop-off by 18% and adding €12M annual revenue.",
    "Education",
    "M.Sc. in Business & Technology",
    "Stockholm School of Economics",
    "2013 - 2015",
    "Skills",
    "Product Strategy",
    "A/B Testing",
    "SQL",
    "Figma",
    "Roadmapping",
    "Agile",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "navy-professional" 1`] = `
{
  "blocks": [
    "Michael Torres",
    "michael.torres@email.com (555) 789-0123 Washington, DC linkedin.com/in/michaeltorres",
    "Summary",
    "Strategic management consultant with 12 years advising Fortune 100 companies on digital transformation.",
    "Experience",
    "Principal Consultant",
    "McKinsey & Company | Washington, DC",
    "Feb 2019 - Present",
    "Lead engagement teams on $5M+ transformation projects for federal and private sector clients.",
    "Senior Associate",
    "Deloitte Consulting | New York, NY",
    "Jul 2014 - Jan 2019",
    "Delivered strategy engagements generating $30M+ in client value.",
    "Education",
    "MBA in Strategy & Finance",
    "Georgetown University",
    "2012 - 2014",
    "Skills",
    "Strategy Consulting",
    "Digital Transformation",
    "Change Management",
    "Financial Modeling",
    "Executive Presentations",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "precision-line" 1`] = `
{
  "blocks": [
    "Nadia Okonkwo",
    "nadia.okonkwo@email.com (312) 555-7741 Chicago, IL linkedin.com/in/nadiaokonkwo",
    "Summary",
    "Data scientist and ML engineer specializing in NLP and recommendation systems. Experienced in production ML pipelines at scale.",
    "Experience",
    "Senior Data Scientist",
    "Grubhub | Chicago, IL",
    "May 2021 - Present",
    "Built personalization engine improving order conversion by 14%. Deployed 6 production ML models serving 30M+ users.",
    "Data Scientist",
    "Nielsen | Chicago, IL",
    "Aug 2018 - Apr 2021",
    "Developed audience segmentation models for media clients with $1B+ ad spend.",
    "Education",
    "M.S. in Statistics",
    "University of Chicago",
    "2016 - 2018",
    "Skills",
    "Python",
    "PyTorch",
    "Spark",
    "SQL",
    "NLP",
    "Scikit-learn",
    "Airflow",
    "Databricks",
    "A/B Testing",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "quicksilver" 1`] = `
{
  "blocks": [
    "Noah Bennett",
    "noah.bennett@email.com",
    "(647) 555-8834",
    "Toronto, ON",
    "linkedin.com/in/noahbennett",
    "Summary",
    "Operations manager and supply chain specialist with expertise in lean manufacturing, inventory optimization, and cross-border logistics.",
    "Skills",
    "Supply Chain",
    "Lean Six Sigma",
    "SAP",
    "Inventory Management",
    "P&L",
    "Team Leadership",
    "Logistics",
    "Experience",
    "Director of Operations",
    "Shopify Logistics | Toronto, ON",
    "Nov 2020 - Present",
    "Oversee fulfillment network of 20 warehouses across North America. Reduced average delivery time by 31% and costs by 18%.",
    "Senior Operations Manager",
    "Amazon Canada | Mississauga, ON",
    "Jun 2016 - Oct 2020",
    "Managed 600-person fulfillment center. Achieved highest on-time delivery rate (99.2%) in Canadian network.",
    "Education",
    "B.Com. in Operations Management",
    "University of Toronto",
    "2011 - 2015",
  ],
  "warningCodes": [
    "ambiguous-columns",
  ],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "saffron-line" 1`] = `
{
  "blocks": [
    "Ravi Krishnamurthy",
    "ravi.k@email.com (408) 555-2983 San Jose, CA raviux.design linkedin.com/in/ravikrishna",
    "Summary",
    "UX researcher and interaction designer crafting accessible, evidence-based digital experiences for enterprise software and consumer apps.",
    "Experience",
    "Principal UX Researcher",
    "Adobe | San Jose, CA",
    "Oct 2020 - Present",
    "Lead mixed-methods research for Creative Cloud suite. Insights drove 3 major product pivots reaching 26M subscribers.",
    "Senior UX Designer",
    "Intuit | Mountain View, CA",
    "Jul 2017 - Sep 2020",
    "Redesigned TurboTax onboarding reducing time-to-file by 28% for first-time users.",
    "Education",
    "M.HCI in Human-Computer Interaction",
    "Carnegie Mellon University",
    "2015 - 2017",
    "Skills",
    "User Research",
    "Figma",
    "Usability Testing",
    "Journey Mapping",
    "Accessibility (WCAG)",
    "Prototyping",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "sidebar-modern" 1`] = `
{
  "blocks": [
    "Charlotte Evans",
    "charlotte.evans@example.com +44 7123 456789 London, UK charlotte-evans.com linkedin.com/in/charlotteevans",
    "Summary",
    "Marketing strategist with a creative eye for branding and 7 years of campaign management experience.",
    "Experience",
    "Lead Marketing Strategist",
    "Visionary Brands | London",
    "2019 - Present",
    "Increased conversions by 40% with integrated digital campaigns targeting UK retail sector.",
    "Education",
    "MA in Marketing",
    "University of Oxford",
    "2015 - 2018",
    "Skills",
    "Digital Marketing",
    "Copywriting",
    "Brand Development",
    "Team Leadership",
    "Projects",
    "Brand Relaunch for XCORP",
    "Rebranded a national franchise.",
    "Branding",
    "UX",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "soft-cards" 1`] = `
{
  "blocks": [
    "Alex Johnson",
    "alex.johnson@email.com (555) 123-4567 San Francisco, CA alexjohnson.dev linkedin.com/in/alexjohnson",
    "Summary",
    "Product-focused software engineer with 6+ years building modern user experiences and scalable systems.",
    "Experience",
    "Senior Software Engineer",
    "Tech Dynamix | Remote",
    "Apr 2020 - Present",
    "Lead React/TypeScript projects; mentoring 8 engineers; designed authentication and cloud integrations.",
    "Frontend Developer",
    "Pixel Rocket | San Jose, CA",
    "Jan 2018 - Mar 2020",
    "Developed robust web interfaces for SaaS platform used by Fortune 500 partners.",
    "Education",
    "B.Sc. in Computer Science",
    "UC Berkeley",
    "2014 - 2017",
    "Skills",
    "JavaScript",
    "React",
    "TypeScript",
    "Node.js",
    "Cloud",
    "REST APIs",
    "Projects",
    "Realtime Collaboration App",
    "In-browser team editor with live presence.",
    "React",
    "Socket.IO",
    "AWS",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "split-frame" 1`] = `
{
  "blocks": [
    "Alex Johnson",
    "alex.johnson@email.com",
    "(555) 123-4567",
    "San Francisco, CA",
    "alexjohnson.dev",
    "linkedin.com/in/alexjohnson",
    "Summary",
    "Product-focused software engineer with 6+ years building modern user experiences and scalable systems.",
    "Skills",
    "JavaScript",
    "React",
    "TypeScript",
    "Node.js",
    "Cloud",
    "REST APIs",
    "Experience",
    "Senior Software Engineer",
    "Tech Dynamix | Remote",
    "Apr 2020 - Present",
    "Lead React/TypeScript projects; mentoring 8 engineers; designed authentication and cloud integrations.",
    "Frontend Developer",
    "Pixel Rocket | San Jose, CA",
    "Jan 2018 - Mar 2020",
    "Developed robust web interfaces for SaaS platform used by Fortune 500 partners.",
    "Education",
    "B.Sc. in Computer Science",
    "UC Berkeley",
    "2014 - 2017",
    "Projects",
    "Realtime Collaboration App",
    "In-browser team editor with live presence.",
    "React",
    "Socket.IO",
    "AWS",
  ],
  "warningCodes": [
    "ambiguous-columns",
  ],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "steady-form" 1`] = `
{
  "blocks": [
    "Dr. Lena Fischer",
    "l.fischer@university.edu +49 89 1234 5678 Munich, Germany lenafischer.research.de linkedin.com/in/lenafischer",
    "Summary",
    "Research scientist and lecturer specializing in machine learning applications for biomedical imaging. Published 40+ peer-reviewed papers.",
    "Experience",
    "Associate Professor",
    "Technical University of Munich | Munich, DE",
    "Sep 2019 - Present",
    "Lead ML for Healthcare lab with 15 PhD students. Secured €3.2M in DFG research grants.",
    "Postdoctoral Researcher",
    "ETH Zürich | Zürich, CH",
    "Jan 2016 - Aug 2019",
    "Developed neural architectures for 3D MRI segmentation. Best Paper Award at MICCAI 2018.",
    "Education",
    "Ph.D. in Computer Science",
    "University of Heidelberg",
    "2012 - 2015",
    "Thesis: Deep Learning Approaches for Medical Image Analysis",
    "Skills",
    "Python",
    "PyTorch",
    "Medical Imaging",
    "Research",
    "Statistics",
    "Grant Writing",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "studio-grid" 1`] = `
{
  "blocks": [
    "Alex Johnson",
    "alex.johnson@email.com",
    "(555) 123-4567",
    "San Francisco, CA",
    "alexjohnson.dev",
    "linkedin.com/in/alexjohnson",
    "Summary",
    "Product-focused software engineer with 6+ years building modern user experiences and scalable systems.",
    "Skills",
    "JavaScript",
    "React",
    "TypeScript",
    "Node.js",
    "Cloud",
    "REST APIs",
    "Experience",
    "Senior Software Engineer",
    "Tech Dynamix | Remote",
    "Apr 2020 - Present",
    "Lead React/TypeScript projects; mentoring 8 engineers; designed authentication and cloud integrations.",
    "Frontend Developer",
    "Pixel Rocket | San Jose, CA",
    "Jan 2018 - Mar 2020",
    "Developed robust web interfaces for SaaS platform used by Fortune 500 partners.",
    "Education",
    "B.Sc. in Computer Science",
    "UC Berkeley",
    "2014 - 2017",
    "Projects",
    "Realtime Collaboration App",
    "In-browser team editor with live presence.",
    "React",
    "Socket.IO",
    "AWS",
  ],
  "warningCodes": [
    "ambiguous-columns",
  ],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "swiss-grid" 1`] = `
{
  "blocks": [
    "Alex Johnson",
    "alex.johnson@email.com (555) 123-4567 San Francisco, CA alexjohnson.dev linkedin.com/in/alexjohnson",
    "Summary",
    "Product-focused software engineer with 6+ years building modern user experiences and scalable systems.",
    "Experience",
    "Senior Software Engineer",
    "Tech Dynamix | Remote",
    "Apr 2020 - Present",
    "Lead React/TypeScript projects; mentoring 8 engineers; designed authentication and cloud integrations.",
    "Frontend Developer",
    "Pixel Rocket | San Jose, CA",
    "Jan 2018 - Mar 2020",
    "Developed robust web interfaces for SaaS platform used by Fortune 500 partners.",
    "Education",
    "B.Sc. in Computer Science",
    "UC Berkeley",
    "2014 - 2017",
    "Skills",
    "JavaScript",
    "React",
    "TypeScript",
    "Node.js",
    "Cloud",
    "REST APIs",
    "Projects",
    "Realtime Collaboration App",
    "In-browser team editor with live presence.",
    "React",
    "Socket.IO",
    "AWS",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "tech-engineer" 1`] = `
{
  "blocks": [
    "Priya Sharma",
    "priya.sharma@email.com (555) 567-8901 Austin, TX priyasharma.io linkedin.com/in/priyasharma",
    "Summary",
    "DevOps engineer and SRE with deep Kubernetes expertise. Reduced infra costs 40% while improving uptime to 99.99%.",
    "Experience",
    "Senior DevOps Engineer",
    "ScaleUp Cloud | Austin, TX",
    "Apr 2020 - Present",
    "Architected multi-region K8s clusters serving 50M+ users. Built GitOps pipelines.",
    "Cloud Engineer",
    "TechBridge Solutions | Dallas, TX",
    "Jun 2017 - Mar 2020",
    "Migrated legacy infrastructure to AWS, achieving 40% cost reduction.",
    "Education",
    "B.S. in Computer Engineering",
    "UT Austin",
    "2013 - 2017",
    "Skills",
    "Kubernetes",
    "Docker",
    "Terraform",
    "AWS",
    "GCP",
    "Python",
    "Prometheus",
    "ArgoCD",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "timeline-dot" 1`] = `
{
  "blocks": [
    "Alex Johnson",
    "alex.johnson@email.com (555) 123-4567 San Francisco, CA alexjohnson.dev linkedin.com/in/alexjohnson",
    "Summary",
    "Product-focused software engineer with 6+ years building modern user experiences and scalable systems.",
    "Experience",
    "Senior Software Engineer",
    "Tech Dynamix | Remote",
    "Apr 2020 - Present",
    "Lead React/TypeScript projects; mentoring 8 engineers; designed authentication and cloud integrations.",
    "Frontend Developer",
    "Pixel Rocket | San Jose, CA",
    "Jan 2018 - Mar 2020",
    "Developed robust web interfaces for SaaS platform used by Fortune 500 partners.",
    "Education",
    "B.Sc. in Computer Science",
    "UC Berkeley",
    "2014 - 2017",
    "Skills",
    "JavaScript",
    "React",
    "TypeScript",
    "Node.js",
    "Cloud",
    "REST APIs",
    "Projects",
    "Realtime Collaboration App",
    "In-browser team editor with live presence.",
    "React",
    "Socket.IO",
    "AWS",
  ],
  "warningCodes": [],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "typewriter-photo" 1`] = `
{
  "blocks": [
    "Sebastian Novak",
    "sebastian.novak@email.com",
    "+1 (604) 555-3377",
    "Vancouver, BC",
    "sebastiannovak.film",
    "linkedin.com/in/sebastiannovak",
    "Summary",
    "Documentary filmmaker and visual storyteller with 12 years of experience capturing compelling narratives across 40+ countries.",
    "Skills",
    "Documentary Direction",
    "Cinematography",
    "Final Cut Pro",
    "DaVinci Resolve",
    "Storytelling",
    "Aerial Drone",
    "Experience",
    "Director & Cinematographer",
    "Freelance / Self-Employed | Vancouver, BC",
    "Jan 2018 - Present",
    "Produced three award-winning feature documentaries screened at Sundance, TIFF, and Hot Docs. Commercial work for NRDC, Red Cross, and National Geographic.",
    "Senior Producer",
    "Vice Media | Toronto, ON",
    "Mar 2014 - Dec 2017",
    "Produced 12-part documentary series for Vice/HBO reaching 8M viewers globally.",
    "Education",
    "B.F.A. in Film & Screen Arts",
    "Emily Carr University",
    "2009 - 2013",
    "Projects",
    ""Borderlands" — Feature Documentary",
    "Sundance 2023 Official Selection. Migration documentary across 8 countries.",
    "Film",
    "Distribution",
  ],
  "warningCodes": [
    "ambiguous-columns",
  ],
}
`;

exports[`extractAtsSemanticDocument over every registered template > extracts a stable reading order for "warm-humanist" 1`] = `
{
  "blocks": [
    "Alex Johnson",
    "alex.johnson@email.com (555) 123-4567 San Francisco, CA alexjohnson.dev linkedin.com/in/alexjohnson",
    "Summary",
    "Product-focused software engineer with 6+ years building modern user experiences and scalable systems.",
    "Experience",
    "Senior Software Engineer",
    "Tech Dynamix | Remote",
    "Apr 2020 - Present",
    "Lead React/TypeScript projects; mentoring 8 engineers; designed authentication and cloud integrations.",
    "Frontend Developer",
    "Pixel Rocket | San Jose, CA",
    "Jan 2018 - Mar 2020",
    "Developed robust web interfaces for SaaS platform used by Fortune 500 partners.",
    "Education",
    "B.Sc. in Computer Science",
    "UC Berkeley",
    "2014 - 2017",
    "Skills",
    "JavaScript",
    "React",
    "TypeScript",
    "Node.js",
    "Cloud",
    "REST APIs",
    "Projects",
    "Realtime Collaboration App",
    "In-browser team editor with live presence.",
    "React",
    "Socket.IO",
    "AWS",
  ],
  "warningCodes": [],
}
`;
